--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   http: ^1.1.0
   cached_network_image: ^3.2.3
+  dotted_border: ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
