--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,16 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   flutter_screenutil: ^5.9.0
-  http: ^1.1.0
+  http:
   cached_network_image: ^3.2.3
   dotted_border: ^2.0.0+3
-
+  image_picker: ^1.0.4
+  mime: ^1.0.4
+  video_thumbnail:
+    git:
+      url: https://github.com/julek-kal/video_thumbnail
+      ref: 734a2d5
+  dio: ^5.3.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
