--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
       ref: 734a2d5
   dio: ^5.3.2
   toast: ^0.3.0
+  dots_indicator: ^3.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
